# ChangeLog for app-admin/conky
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/conky/ChangeLog,v 1.76 2008/04/22 06:05:45 omp Exp $

  22 Apr 2008; David Shakaryan <omp@gentoo.org> conky-1.4.9-r1.ebuild,
  conky-1.5.1.ebuild, conky-1.5.2_pre01107.ebuild:
  Add dev-util/pkgconfig to DEPEND. (bug #216448)

*conky-1.5.2_pre01107 (16 Apr 2008)

  16 Apr 2008; David Shakaryan <omp@gentoo.org>
  -conky-1.5.2_pre01104.ebuild, +conky-1.5.2_pre01107.ebuild:
  Version bump; fixes compile error. (bug #217813)

  14 Apr 2008; David Shakaryan <omp@gentoo.org>
  -files/conky-1.5.0-disable-x11.patch, -conky-1.5.0.ebuild:
  Remove older version.

*conky-1.5.2_pre01104 (14 Apr 2008)

  14 Apr 2008; David Shakaryan <omp@gentoo.org>
  +conky-1.5.2_pre01104.ebuild:
  Version bump.

*conky-1.5.1 (01 Apr 2008)

  01 Apr 2008; David Shakaryan <omp@gentoo.org>
  -conky-1.5.1_pre01052.ebuild, -conky-1.5.1_pre01083.ebuild,
  +conky-1.5.1.ebuild:
  Conky 1.5.1 released.

*conky-1.5.1_pre01083 (30 Mar 2008)

  30 Mar 2008; David Shakaryan <omp@gentoo.org>
  +conky-1.5.1_pre01083.ebuild:
  Version bump requested by upstream.

*conky-1.5.1_pre01052 (27 Mar 2008)

  27 Mar 2008; David Shakaryan <omp@gentoo.org>
  +conky-1.5.1_pre01052.ebuild:
  Yet another version bump.

*conky-1.5.0 (27 Mar 2008)

  27 Mar 2008; David Shakaryan <omp@gentoo.org>
  +files/conky-1.5.0-disable-x11.patch, +conky-1.5.0.ebuild:
  Version bump per request of Brenden Matthews. (bug #214330)

  19 Mar 2008; Christian Faulhammer <opfer@gentoo.org>
  conky-1.4.9-r1.ebuild:
  audacious >= 1.5.0 has dbus support always enabled so adjust the test for
  that feature

  03 Mar 2008; Christian Faulhammer <opfer@gentoo.org>
  conky-1.4.9-r1.ebuild:
  prettify HOMEPAGE entry

  07 Feb 2008; Christian Faulhammer <opfer@gentoo.org> -conky-1.4.6.ebuild,
  -conky-1.4.8.ebuild:
  clean up

  06 Feb 2008; nixnut <nixnut@gentoo.org> conky-1.4.9-r1.ebuild: