@@ -4,15 +4,17 @@ Hash: SHA1
 DIST conky-1.4.9.tar.bz2 412510 RMD160 d708ea0eae60cf1c1ca4d176fa20f8a464b803e1 SHA1 26f233588ea83b157729bb7dd56a64ffae856d20 SHA256 a6c98aa34932c8684e19e97fad460c04c2b7848c897bdaa293d37fbcc4d7949b
 DIST conky-1.5.1.tar.bz2 422965 RMD160 83458b7da66e3166dec24c2f8292201761e635f5 SHA1 fe6f0e3440fe9d18afe31ec0cacfa5b38042532a SHA256 ca8b1dbc87e7c2c44d06f70e2b195f59ae8b09f8d490cc92cfac8df10f7bc239
 DIST conky-1.5.2_pre01107.tar.bz2 426908 RMD160 0a210dcef7ba1c11fa615e610dd4a974b927e1bb SHA1 d73c9fcf0387109b21b41467ae3fae4584badd0e SHA256 a0791736f622f19d3caf2c8e6c62ccd7bf5b03db30fb70e08a025c6a6aa92d23
+DIST conky-1.5.2_pre01116.tar.bz2 427562 RMD160 01cd68f9b77180fdd143564c9d4d03ba03f67db3 SHA1 2d992079d0911a40e962fc0aa6299d40851f4c9b SHA256 8d92f12497d0aa088a7de3ad6b41938913268f3b0dcbc30173b1a1df44aabc1d
 EBUILD conky-1.4.9-r1.ebuild 3618 RMD160 57b6229b5d5ea114ae616767cd155a7e741f5fa4 SHA1 7805731cd1f069ab2f70602a95bd94f114421aa4 SHA256 c05d1cccdb2149577a5df5c3bf9445e99cc12f2504f57b9cfdc9649a0ade64ad
 EBUILD conky-1.5.1.ebuild 3696 RMD160 c7e492406ac4513648da432313801cc2d65d25e0 SHA1 8b6f8edb0d1c70e926d583e95f9038c0eddc293d SHA256 7d112c40be9f459725eef4b0b6e4f09611e38760469b6c3581ee4d0a7899ae5e
 EBUILD conky-1.5.2_pre01107.ebuild 3705 RMD160 8e47ed50ab103984e30e47fcea95103dff3393b6 SHA1 fd733f1b7ae548ff5b27004496650e693a9769b2 SHA256 705a257f5125f838be7e9c7d8b948602b6e6bc6e0cb4cd41a3cd786e83e6b612
-MISC ChangeLog 12125 RMD160 35eaa7c973dbfc431aeea5990f38a789b32f1d7b SHA1 540032e94cfa46d053c6e5cb7090937de2185a37 SHA256 50f8746e50429b73606aad290af2f144931f312a31af90a593704175d91cb752
+EBUILD conky-1.5.2_pre01116.ebuild 3705 RMD160 93ab93dfe460ecc0f717ed2b8ba5dc5267e4f444 SHA1 2132b678ba9f0275a4911b980225eeabfde6066c SHA256 74dd7d5970c45ea50fb3f81fe28cef511798814dd561135443b4aa386bc2cff3
+MISC ChangeLog 12259 RMD160 e0a932e1f595ff874e2999ebfe80d19d8fb7d7f1 SHA1 06389cf2a3fae09d07527941b57c37d0a33a8022 SHA256 5ff9916500dba19420fb8ce74ba8def73f1a27691c30cd0509f32337a9d0ca9f
 MISC metadata.xml 661 RMD160 e01c3355104751367370f01e91fda7b7e050556b SHA1 7a5e7eee245dbc789a0db79578673c12786eb5a3 SHA256 1aeebff165b0c5ec46cdfc56d090a8bc2c8a2d3304d5dd1385c045d4beb113d3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEUEARECAAYFAkgNgEcACgkQvSApE0uP4UtitACfdzgg8vULNi3lLDFZb92BVyHS
-C/IAmKusRAuVVojN4B1xq/5+g5FfFOM=
-=d+EH
+iEYEARECAAYFAkgX4DMACgkQvSApE0uP4Uv5uQCfTReN/2LH77Z7Fspg+QHzFxdm
+NHYAn1MiWSB6ymRkjpB9rn8aJKU+Xrrk
+=Mx3A
 -----END PGP SIGNATURE-----
